12345678901234567890123456789012345678901234567890123456789012345678901234567890
         1         2         3         4         5         6         7         8
----+----|----+----|----+----|----+----|----+----|----+----|----+----|----+----|



ChangeLog (2003.nn.nn):
=======================

- Applied patches:
  - iometer-2003.05.10-IoTimeConsolidation.patch by Daniel Scheibli
    (Cleanup for the IOTime.* files - getting rid of IOTime.h also).
  - iometer-2003.05.10-IoMtrGlobalDefines1.patch by Daniel Scheibli
    (introduces the IOMTR_* global defines to consolidate the different
    global defines coming with the different platforms - ease future
    ports).
- Documentation:
   - Added a remark into the .../README file (containing additions for
     running Dynamo on a Linux machine with NTPL support).



ChangeLog (2003.05.10):
=======================

- Applied patches:
  - iometer-2003.02.15-ResultEndTimeHighRes.patch by Daniel Scheibli
    (modifies the result file output to contain the milliseconds as well).
  - iometer-2003.05.04-CIOB5.patch by Matt Robinson (modifies the mechanisms
    for read and writes in IOMeter so that different buffers are used each
    time to avoid cache line collisions and performance lock-ups with some
    chipsets).
  - iometer-2003.02.15-ResultEndTime.patch by Daniel Scheibli (modifies the
    result file output to append the current timestamp after each block of
    results).
  - iometer-2003.02.15-HandleDummy0.patch by Daniel Scheibli (modifies the
    Get_NI_Counter function to handle interfaces without leading blanks
    (like dummy0) as well).
  - iometer-2003.02.15-NoPipe.patch by Daniel Scheibli (removes the Windows
    Pipes support for communication which simplifies the code).
  - iometer-2003.02.15_Get_NI_Counter.patch by Joe Eiler (brings the
    handling for network interfaces that does not contain statistics in
    /proc/net/dev - as for example with Intel Link Aggreation).    