@@ -8,6 +8,9 @@ ChangeLog (2003.nn.nn):
 =======================
 
 - Applied patches:
+  - iometer-2003.05.10-Solaris9onI386.patch by Daniel Scheibli
+    (Assimilates the patch submitted by Robert Jones to build with
+    Solaris 9 on x86 (i386)).
   - iometer-2003.05.10-IoTimeConsolidation.patch by Daniel Scheibli
     (Cleanup for the IOTime.* files - getting rid of IOTime.h also).
   - iometer-2003.05.10-IoMtrGlobalDefines1.patch by Daniel Scheibli
